src/test/ui/wf/wf-enum-fields-struct-variant.stderr
error[E0277]: the trait bound `A: std::marker::Copy` is not satisfied
  --> $DIR/wf-enum-fields-struct-variant.rs:13:9
   |
LL | struct IsCopy<T:Copy> {
   | --------------------- required by `IsCopy`
...
LL | enum AnotherEnum<A> {
   |                  - help: consider restricting this bound: `A: std::marker::Copy`
LL |     AnotherVariant {
LL |         f: IsCopy<A>
   |         ^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
